Ensure ::before line on the social activities is aligned to the left.

--- a/themes/asterisk/source/styles/modules/_social-activities.scss
+++ b/themes/asterisk/source/styles/modules/_social-activities.scss
@@ -35,6 +35,10 @@
       height: 100%;
     }
 
+    &::before {
+      left: 0;
+    }
+
     &::after {
       right: 0;
     }
